--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perth Weather Warnings</title>
-    <link rel="stylesheet" href="css/stylesheet.css">
+    <link rel="stylesheet" href="CSS/stylesheet.css">
 </head>
 <body>
     <header>
@@ -23,6 +23,6 @@
     <footer>
         <p> 2024 Perth Weather Warnings</p>
     </footer>
-    <script src="script.js"></script>
+    <script src="JS/script.js"></script>
 </body>
 </html>
