--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 <body>
     <header>
         <h1>Perth Weather Warnings</h1>
-       
     </header>
     <nav>
-        <!-- Navigation links can be added here -->
+        <ul>
+            <li><a href="#weather">Weather</a></li>
+            <li><a href="#feed">State-based Warning feeds</a></li>
+        </ul>
     </nav>
     <main>
         <section id="weather">
