html updated new layout

--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
         </ul>
     </nav>
     <main>
-        <section id="weather">
-            <!-- Weather information will be displayed here -->
-        </section>
-        <section id="feed">
-            <!-- RSS feed content will be displayed here -->
-        </section>
+        <div class="content">
+            <section id="weather">
+                <!-- Weather information will be displayed here -->
+            </section>
+            <section id="feed">
+                <!-- RSS feed content will be displayed here -->
+            </section>
+        </div>
     </main>
     <footer>
         <p>&copy; 2024 Perth Weather Warnings</p>
