--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav>
         <ul>
             <li><a href="#weather">Weather</a></li>
-            <li><a href="#feed">State-based Warning feeds</a></li>
+            <li><a href="#feed">State-based Warning Feeds</a></li>
         </ul>
     </nav>
     <main>
@@ -27,7 +27,7 @@
         </div>
     </main>
     <footer>
-        <p>&copy; 2024 Perth Weather Warnings</p>
+        <p>&copy; 20XX Perth Weather Warnings</p>
     </footer>
     <script src="JS/script.js"></script>
 </body>
