--- a/index.html
+++ b/index.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <title>RSS Reader</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Perth Weather Warnings</title>
-    <link rel="stylesheet" href="CSS/stylesheet.css">
+    <meta name="author" content="Your Name">
+    <meta name="description" content="A simple RSS Reader application.">
+    <meta name="keywords" content="RSS, Reader, Feed, Articles">
+
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
+
 <body>
     <header>
-        <h1>Perth Weather Warnings</h1>
+        <h2>RSS Reader</h2>
     </header>
-    <nav>
-        <ul>
-            <li><a href="#weather">Weather</a></li>
-            <li><a href="#feed">State-based Warning Feeds</a></li>
-        </ul>
-    </nav>
+
     <main>
-        <div class="content">
-            <section id="weather">
-                <!-- Weather information will be displayed here -->
-            </section>
-            <section id="feed">
-                <!-- RSS feed content will be displayed here -->
-            </section>
-        </div>
+        <section id="content"></section>
     </main>
+
     <footer>
-        <p>&copy; 20XX Perth Weather Warnings</p>
+        <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">
+            <img alt="Creative Commons License" src="https://i.creativecommons.org/l/by/4.0/88x31.png" />
+        </a><br>
+        This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>
     </footer>
-    <script src="JS/script.js"></script>
+
+    <script src="JS/script.js" defer></script>
 </body>
+
 </html>
