--- a/index.html
+++ b/index.html
@@ -2,33 +2,26 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <title>RSS Reader</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Your Name">
-    <meta name="description" content="A simple RSS Reader application.">
-    <meta name="keywords" content="RSS, Reader, Feed, Articles">
-
-    <link rel="stylesheet" href="CSS/style.css">
+  <meta charset="UTF-8">
+  <title>Weather Warning App</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="CSS/stylesheet.css">
 </head>
 
 <body>
-    <header>
-        <h2>RSS Reader</h2>
-    </header>
+  <header>
+    <h1>Weather Warnings</h1>
+  </header>
 
-    <main>
-        <section id="content"></section>
-    </main>
+  <main>
+    <div id="weather-warnings"></div>
+  </main>
 
-    <footer>
-        <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">
-            <img alt="Creative Commons License" src="https://i.creativecommons.org/l/by/4.0/88x31.png" />
-        </a><br>
-        This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>
-    </footer>
+  <footer>
+    <p>&copy; 2024 Weather Warning App</p>
+  </footer>
 
-    <script src="JS/script.js" defer></script>
+  <script src="JS/script.js" defer></script>
 </body>
 
 </html>
