testing with claude

--- a/index.html
+++ b/index.html
@@ -1,27 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <title>Weather Warning App</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="CSS/stylesheet.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Weather Warning WA </title>
+    <link rel="stylesheet" href="CSS/stylesheet.css">
 </head>
-
 <body>
-  <header>
-    <h1>Weather Warnings</h1>
-  </header>
-
-  <main>
-    <div id="weather-warnings"></div>
-  </main>
-
-  <footer>
-    <p>&copy; 2024 Weather Warning App</p>
-  </footer>
-
-  <script src="JS/script.js" defer></script>
+    <section id="rss-feed-container" class="rss-feed">
+        <!-- RSS feed items will be added here -->
+    </section>
+    <script src="JS/script.js"></script>
 </body>
-
 </html>
