CONVERT RSS TO JSON

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <h2>RSS Reader</h2>
         <form>
-            <input type="text" id="rss-input" value="https://rss.weatherzone.com.au/?u=12994-1285&lt=aploc&lc=13896&obs=1&fc=1&warn=1">
+            <input type="text" id="rss-input" value="https://rss2json.com/#rss_url=http%3A%2F%2Fwww.bom.gov.au%2Ffwo%2FIDZ00074.warnings_marine_wa.xml">
             <button type="button" id="add-feed">Get Articles</button>
         </form>
     </header>
